--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server/index.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "lucide-react": "^0.344.0",
-    "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3"
